--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <div class="container">
     <header>
-      <div class="title">My Portfolio (PDF)</div>
+      <div class="title">Jerry's Portfolio (PDF)</div>
       <div class="actions">
         <a class="button" href="assets/portfolio.pdf" download>Download PDF</a>
         <a class="link" href="assets/portfolio.pdf" target="_blank" rel="noopener">Open in new tab ↗</a>
