changed up html to my name

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </object>
 
     <p class="tip">Tip: If the inline viewer doesn't work on some browsers, use the "Open in new tab" link above.</p>
-    <footer>© <span id="y"></span> Your Name</footer>
+    <footer>© <span id="y"></span> Jerry Fu</footer>
   </div>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
