--- a/index.html
+++ b/index.html
@@ -3,77 +3,50 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portfolio (PDF Viewer)</title>
-  <meta name="description" content="Online viewer for my PDF portfolio." />
+  <title>Jerry’s Portfolio (PDF)</title>
+  <meta name="description" content="Direct links to my portfolio PDF." />
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <style>
     :root {
-      --bg: #0b0c10;
-      --card: #111318;
-      --text: #eaf0f6;
-      --muted: #9aa4b2;
-      --accent: #67e8f9;
+      --bg:#0b0c10; --card:#111318; --text:#eaf0f6; --muted:#9aa4b2; --accent:#67e8f9; --border:rgba(255,255,255,.08);
     }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0; background: var(--bg); color: var(--text);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-      display: grid; place-items: center; padding: 24px;
+    @media (prefers-color-scheme: light) {
+      :root { --bg:#f7fafc; --card:#fff; --text:#0b1220; --muted:#5b6573; --accent:#0ea5e9; --border:rgba(0,0,0,.08); }
     }
-    .container {
-      width: min(1100px, 100%);
-      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.00));
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 20px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.35);
-      padding: 20px;
+    *{box-sizing:border-box} html,body{height:100%}
+    body{
+      margin:0; background:var(--bg); color:var(--text);
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol",sans-serif;
+      display:grid; place-items:center; padding:16px;
     }
-    header {
-      display: flex; align-items: center; justify-content: space-between;
-      gap: 12px; flex-wrap: wrap; margin-bottom: 12px;
+    .card{
+      width:min(720px,100%); background:var(--card); border:1px solid var(--border);
+      border-radius:16px; box-shadow:0 10px 40px rgba(0,0,0,.25);
+      padding:clamp(16px,3.5vw,28px); text-align:center;
     }
-    .title { font-size: clamp(18px, 2.5vw, 22px); font-weight: 650; letter-spacing: .3px; }
-    .actions { display: flex; gap: 10px; align-items: center; }
-    a.button {
-      padding: 10px 14px; border-radius: 12px; text-decoration: none; color: #081015;
-      background: var(--accent); font-weight: 600;
+    h1{font-size:clamp(18px,3.4vw,28px); margin:0 0 10px}
+    p{color:var(--muted); margin:0 0 16px}
+    .actions{display:grid; grid-template-columns:1fr 1fr; gap:10px; margin-top:8px}
+    a.button{
+      display:inline-flex; align-items:center; justify-content:center; gap:8px; min-height:44px;
+      font-weight:700; text-decoration:none; border-radius:12px; background:var(--accent); color:#081015;
+      padding:12px 14px; transition:transform .04s ease, filter .15s ease;
     }
-    a.link { color: var(--accent); text-decoration: none; }
-    .viewer {
-      width: 100%; height: min(82vh, 900px); border: none; border-radius: 14px; overflow: hidden;
-      background: #0f1116;
-      display: grid; place-items: center;
-    }
-    .fallback {
-      text-align: center; color: var(--muted); padding: 32px;
-    }
-    footer { margin-top: 10px; color: var(--muted); font-size: 13px; text-align: center; }
-    .tip { font-size: 13px; color: var(--muted); margin: 10px 0 0 2px; }
-    code { background: rgba(255,255,255,0.06); padding: 3px 6px; border-radius: 6px; }
+    a.button:hover{filter:brightness(1.05)} a.button:active{transform:translateY(1px)}
+    footer{margin-top:12px; color:var(--muted); font-size:13px}
+    @media (max-width:520px){ .actions{grid-template-columns:1fr} }
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <div class="title">Jerry's Portfolio (PDF)</div>
-      <div class="actions">
-        <a class="button" href="assets/portfolio.pdf" download>Download PDF</a>
-        <a class="link" href="assets/portfolio.pdf" target="_blank" rel="noopener">Open in new tab ↗</a>
-      </div>
-    </header>
-
-    <object class="viewer" data="assets/portfolio.pdf#view=FitH" type="application/pdf">
-      <div class="fallback">
-        <p><strong>PDF not found yet.</strong></p>
-        <p>Please add your file at <code>assets/portfolio.pdf</code> and commit to this repo.</p>
-        <p>After pushing, refresh this page.</p>
-      </div>
-    </object>
-
-    <p class="tip">Tip: If the inline viewer doesn't work on some browsers, use the "Open in new tab" link above.</p>
-    <footer>© <span id="y"></span> Jerry Fu</footer>
-  </div>
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+  <main class="card" role="main" aria-label="Portfolio PDF links">
+    <h1>Jerry’s Portfolio</h1>
+    <p>Direct links work best across all browsers and phones.</p>
+    <div class="actions">
+      <a class="button" href="assets/portfolio.pdf" target="_blank" rel="noopener" aria-label="Open portfolio PDF in a new tab">Open PDF ↗</a>
+      <a class="button" href="assets/portfolio.pdf" download aria-label="Download portfolio PDF">Download PDF</a>
+    </div>
+    <footer>© <span id="year"></span> Jerry Fu</footer>
+  </main>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
