changed up html to get rid of inline viewer

--- a/index.html
+++ b/index.html
@@ -1,211 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jerry Fu — Electrical & Embedded Systems</title>
-  <meta name="description" content="Portfolio landing page for Jerry Fu — electrical engineering, embedded systems, and PCB design." />
-  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-
-  <!-- Social (optional, safe defaults) -->
-  <meta property="og:title" content="Jerry Fu — Electrical & Embedded Systems" />
-  <meta property="og:description" content="Embedded systems • PCB design • Hardware validation" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="" />
-
-  <style>
-    /* ===== Design tokens ===== */
-    :root {
-      --bg: #0b0c10;        /* page */
-      --panel: #0f1116;     /* cards */
-      --text: #eaf0f6;      /* primary text */
-      --muted: #9aa4b2;     /* secondary text */
-      --border: rgba(255,255,255,0.10);
-      --accent: #67e8f9;    /* cyan */
-      --accent-ink: #081015;/* on-accent */
-      --ring: 0 0 0 6px rgba(103,232,249,0.15);
-      --radius: 16px;
-    }
-    @media (prefers-color-scheme: light) {
-      :root {
-        --bg: #f7fafc;
-        --panel: #ffffff;
-        --text: #0b1220;
-        --muted: #5b6573;
-        --border: rgba(0,0,0,0.10);
-        --accent: #0ea5e9;
-        --accent-ink: #081015;
-      }
-    }
-
-    /* ===== Base ===== */
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-      background: radial-gradient(1000px 600px at 10% -10%, rgba(103,232,249,0.08), transparent 50%), var(--bg);
-      color: var(--text);
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-    a { color: inherit; text-decoration: none; }
-    .wrap { max-width: 1120px; margin: 0 auto; padding: clamp(16px, 4vw, 32px); }
-
-    /* ===== Header / Navbar ===== */
-    .nav { display: flex; align-items: center; justify-content: space-between; gap: 12px; padding: 8px 0 18px; }
-    .brand { font-weight: 800; letter-spacing: .2px; font-size: clamp(16px, 2.2vw, 20px); }
-    .nav-links { display: flex; gap: 14px; flex-wrap: wrap; }
-    .pill {
-      display: inline-flex; align-items: center; gap: 8px; height: 40px; padding: 0 14px; border-radius: 999px;
-      border: 1px solid var(--border); background: color-mix(in lch, var(--panel) 80%, transparent);
-    }
-    .primary {
-      background: var(--accent); color: var(--accent-ink); border: none; font-weight: 700;
-      box-shadow: 0 10px 30px rgba(103,232,249,0.20);
-    }
-    .pill:focus-visible { outline: none; box-shadow: var(--ring); }
-
-    /* ===== Hero ===== */
-    .hero { display: grid; grid-template-columns: 1.2fr 1fr; gap: clamp(18px, 4vw, 36px); align-items: center; padding: 12px 0 24px; }
-    .hero h1 { font-size: clamp(26px, 5vw, 46px); line-height: 1.08; letter-spacing: .2px; margin: 0 0 10px; }
-    .hero p { color: var(--muted); margin: 0 0 18px; font-size: clamp(14px, 1.8vw, 16px); }
-    .hero .cta { display: flex; gap: 10px; flex-wrap: wrap; }
-    .badge { display: inline-flex; gap: 8px; align-items: center; color: var(--muted); font-size: 13px; }
-    .panel {
-      border: 1px solid var(--border); background: var(--panel); border-radius: var(--radius);
-      padding: clamp(14px, 3vw, 22px);
-    }
-
-    /* ===== Project grid ===== */
-    .section { margin-top: clamp(24px, 6vw, 48px); }
-    .section h2 { margin: 0 0 12px; font-size: clamp(18px, 3vw, 24px); }
-    .muted { color: var(--muted); }
-    .grid { display: grid; gap: 14px; grid-template-columns: repeat(12, 1fr); }
-    .card { grid-column: span 6; border: 1px solid var(--border); background: var(--panel); border-radius: 14px; overflow: clip; display: grid; }
-    .card img { width: 100%; height: 180px; object-fit: cover; background: #0f1116; }
-    .card .body { padding: 14px; display: grid; gap: 6px; }
-    .tagrow { display: flex; gap: 8px; flex-wrap: wrap; }
-    .tag { font-size: 12px; color: var(--muted); border: 1px dashed var(--border); padding: 4px 8px; border-radius: 999px; }
-    .card a.more { margin-top: 6px; color: var(--accent); font-weight: 600; }
-
-    @media (max-width: 900px) { .hero { grid-template-columns: 1fr; } .card { grid-column: span 12; } }
-
-    /* ===== Footer ===== */
-    footer { color: var(--muted); font-size: 13px; text-align: center; padding: 28px 0 8px; }
-  </style>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0; url=assets/portfolio.pdf">
+  <title>Jerry's Portfolio</title>
 </head>
-<body>
-  <div class="wrap">
-    <!-- ==== Navbar ==== -->
-    <nav class="nav" aria-label="Primary">
-      <div class="brand">JF</div>
-      <div class="nav-links">
-        <a class="pill" href="#projects">Projects</a>
-        <a class="pill" href="#contact">Contact</a>
-        <a class="pill primary" href="assets/portfolio.pdf" target="_blank" rel="noopener">Portfolio PDF ↗</a>
-      </div>
-    </nav>
-
-    <!-- ==== Hero ==== -->
-    <section class="hero">
-      <div>
-        <h1>Jerry Fu — Electrical & Embedded Systems</h1>
-        <p>
-          I design and validate hardware: embedded systems, high‑quality PCB layouts, and data‑driven testing.
-          Recent work spans nRF52840 wireless keyboards, sensing/actuation boards, and radar validation tooling.
-        </p>
-        <div class="cta">
-          <a class="pill primary" href="assets/resume.pdf" target="_blank" rel="noopener">Resume PDF ↗</a>
-          <a class="pill" href="assets/portfolio.pdf" target="_blank" rel="noopener">Portfolio PDF ↗</a>
-          <a class="pill" href="https://github.com/jfu4" target="_blank" rel="noopener">GitHub</a>
-          <a class="pill" href="https://www.linkedin.com/in/jerryfu6158" target="_blank" rel="noopener">LinkedIn</a>
-        </div>
-        <div class="badge" style="margin-top:10px;">Open to: Hardware/Embedded internships • New‑grad EE roles</div>
-      </div>
-      <div class="panel" aria-label="Highlights">
-        <div style="display:grid; gap:8px; font-size:14px;">
-          <div><strong>Core:</strong> PCB design (2–6 layer), embedded C/C++, Python validation, KiCad/Altium</div>
-          <div><strong>Tooling:</strong> PSUs, scopes, diff probes, HIL rigs, DOE analysis, SQL/Python dashboards</div>
-          <div><strong>Focus:</strong> Low‑power wireless, sensing, power electronics, robust test automation</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ==== Projects ==== -->
-    <section id="projects" class="section" aria-labelledby="projects-title">
-      <h2 id="projects-title">Selected Projects</h2>
-      <p class="muted" style="margin:0 0 10px">A few quick snapshots — click through to repos or details.</p>
-      <div class="grid">
-        <!-- Card 1 -->
-        <article class="card">
-          <img src="assets/hero-keyboard.jpg" alt="Reversible split keyboard PCB render (nRF52840)" onerror="this.src='assets/placeholder.svg'" />
-          <div class="body">
-            <h3 style="margin:0; font-size:18px">Reversible Split Wireless Keyboard</h3>
-            <p class="muted" style="margin:0">nRF52840 (Holyiot), ZMK, Li‑ion power path, E‑Ink (Nice!View), USB‑C.</p>
-            <div class="tagrow">
-              <span class="tag">nRF52840</span><span class="tag">ZMK</span><span class="tag">USB‑C</span><span class="tag">4‑layer PCB</span>
-            </div>
-            <a class="more" href="#" target="_blank" rel="noopener">View details ↗</a>
-          </div>
-        </article>
-        <!-- Card 2 -->
-        <article class="card">
-          <img src="assets/hero-sensor.jpg" alt="Voltage/current sensing PCB on bench" onerror="this.src='assets/placeholder.svg'" />
-          <div class="body">
-            <h3 style="margin:0; font-size:18px">Voltage / Current Sensing Board</h3>
-            <p class="muted" style="margin:0">Precision divider + instrumentation; ADC‑friendly scaling, reverse‑polarity safe.</p>
-            <div class="tagrow">
-              <span class="tag">ADC</span><span class="tag">Instrumentation</span><span class="tag">KiCad</span>
-            </div>
-            <a class="more" href="#" target="_blank" rel="noopener">View details ↗</a>
-          </div>
-        </article>
-        <!-- Card 3 -->
-        <article class="card">
-          <img src="assets/hero-radar.jpg" alt="Lab setup for radar validation" onerror="this.src='assets/placeholder.svg'" />
-          <div class="body">
-            <h3 style="margin:0; font-size:18px">Radar Validation Tooling</h3>
-            <p class="muted" style="margin:0">Python HIL testers, calibration scripts, DOE analysis for sensor characterization.</p>
-            <div class="tagrow">
-              <span class="tag">Python</span><span class="tag">HIL</span><span class="tag">DOE</span>
-            </div>
-            <a class="more" href="#" target="_blank" rel="noopener">View details ↗</a>
-          </div>
-        </article>
-        <!-- Card 4 -->
-        <article class="card">
-          <img src="assets/hero-power.jpg" alt="Power electronics prototype" onerror="this.src='assets/placeholder.svg'" />
-          <div class="body">
-            <h3 style="margin:0; font-size:18px">Buck Converter Labs & Tooling</h3>
-            <p class="muted" style="margin:0">Switching waveforms, inductor ripple, MOSFET loss analysis; scripts/notes.</p>
-            <div class="tagrow">
-              <span class="tag">Power</span><span class="tag">PSIM</span><span class="tag">Lab</span>
-            </div>
-            <a class="more" href="#" target="_blank" rel="noopener">View details ↗</a>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <!-- ==== Contact ==== -->
-    <section id="contact" class="section" aria-labelledby="contact-title">
-      <h2 id="contact-title">Contact</h2>
-      <div class="panel" style="display:grid; gap:10px;">
-        <div class="muted">Based in Vancouver, BC • Open to relocation</div>
-        <div style="display:flex; gap:10px; flex-wrap: wrap;">
-          <a class="pill primary" href="mailto:jerryfu6158@gmail.com">Email me</a>
-          <a class="pill" href="https://github.com/jfu4" target="_blank" rel="noopener">GitHub</a>
-          <a class="pill" href="https://www.linkedin.com/in/jerryfu6158" target="_blank" rel="noopener">LinkedIn</a>
-        </div>
-      </div>
-    </section>
-
-    <footer>© <span id="year"></span> Jerry Fu</footer>
-  </div>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+<body style="font-family: sans-serif; padding: 40px;">
+  <p>If you are not automatically redirected, <a href="assets/portfolio.pdf">click here to open my portfolio PDF</a>.</p>
 </body>
 </html>
