--- a/index.html
+++ b/index.html
@@ -1,209 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jerry's Portfolio (PDF)</title>
-  <meta name="description" content="Online viewer for my PDF portfolio." />
-  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-
-  <style>
-    /* ---- Design tokens ---- */
-    :root {
-      --bg: #0b0c10;
-      --card: #111318;
-      --text: #eaf0f6;
-      --muted: #9aa4b2;
-      --accent: #67e8f9;
-      --border: rgba(255,255,255,0.08);
-    }
-    @media (prefers-color-scheme: light) {
-      :root {
-        --bg: #f7fafc;
-        --card: #ffffff;
-        --text: #0b1220;
-        --muted: #5b6573;
-        --accent: #0ea5e9;
-        --border: rgba(0,0,0,0.08);
-      }
-    }
-
-    /* ---- Global ---- */
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: var(--text);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-      padding: 16px;
-      display: grid;
-      place-items: center;
-    }
-
-    /* ---- Layout card ---- */
-    .container {
-      width: min(980px, 100%);
-      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.00)), var(--card);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.25);
-      padding: clamp(14px, 3vw, 22px);
-    }
-
-    /* ---- Header ---- */
-    header {
-      display: grid;
-      grid-template-columns: 1fr auto;
-      gap: 12px;
-      align-items: center;
-      margin-bottom: 10px;
-    }
-    .title {
-      font-size: clamp(18px, 2.6vw, 24px);
-      font-weight: 700;
-      letter-spacing: .2px;
-    }
-    .actions {
-      display: flex;
-      gap: 8px;
-      align-items: center;
-      justify-self: end;
-      flex-wrap: wrap;
-    }
-    a.button, button.button {
-      appearance: none;
-      border: none;
-      padding: 10px 14px;
-      border-radius: 12px;
-      text-decoration: none;
-      font-weight: 600;
-      cursor: pointer;
-      background: var(--accent);
-      color: #081015;
-      transition: transform .04s ease, filter .15s ease;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      min-height: 40px;
-    }
-    a.button:hover, button.button:hover { filter: brightness(1.05); }
-    a.button:active, button.button:active { transform: translateY(1px); }
-    a.link {
-      color: var(--accent);
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    /* ---- Desktop/Tablet PDF viewer ---- */
-    .viewer {
-      width: 100%;
-      height: min(82vh, 880px);
-      border: none;
-      border-radius: 12px;
-      overflow: hidden;
-      background: #0f1116;
-      display: grid;
-      place-items: center;
-    }
-    .fallback {
-      text-align: center;
-      color: var(--muted);
-      padding: 28px;
-      line-height: 1.5;
-    }
-
-    /* ---- Mobile-first enhancements ---- */
-    .tip, footer { color: var(--muted); font-size: 13px; }
-    footer { margin-top: 10px; text-align: center; }
-
-    /* Mobile layout: stack header, full-width buttons, swap to mobile card */
-    .mobile-card { display: none; }
-    @media (max-width: 640px) {
-      header {
-        grid-template-columns: 1fr;
-        gap: 8px;
-      }
-      .actions {
-        justify-self: stretch;
-        width: 100%;
-      }
-      .actions a.button, .actions button.button {
-        flex: 1 1 auto;
-      }
-
-      /* Hide the embedded viewer on smaller phones (better UX) */
-      .viewer { display: none; }
-
-      /* Show a dedicated mobile card with big targets */
-      .mobile-card {
-        display: grid;
-        gap: 12px;
-        margin-top: 6px;
-        border: 1px solid var(--border);
-        border-radius: 12px;
-        padding: 14px;
-        background: var(--card);
-      }
-      .mobile-card p {
-        margin: 0;
-        color: var(--muted);
-        font-size: 14px;
-      }
-      .mobile-actions {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 8px;
-      }
-    }
-  </style>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0; url=assets/portfolio.pdf">
+  <title>Jerry's Portfolio</title>
 </head>
-<body>
-  <div class="container">
-    <header>
-      <div class="title">Jerry’s Portfolio (PDF)</div>
-      <div class="actions">
-        <a class="button" href="assets/portfolio.pdf" download aria-label="Download portfolio PDF">Download</a>
-        <a class="button" href="assets/portfolio.pdf" target="_blank" rel="noopener" aria-label="Open portfolio PDF in a new tab">Open ↗</a>
-      </div>
-    </header>
-
-    <!-- Desktop/Tablet embedded PDF -->
-    <object class="viewer" data="assets/portfolio.pdf#view=FitH" type="application/pdf" aria-label="Embedded PDF viewer">
-      <div class="fallback">
-        <p><strong>PDF not found yet.</strong></p>
-        <p>Place your file at <code>assets/portfolio.pdf</code> and refresh.</p>
-      </div>
-    </object>
-
-    <!-- Mobile card (shown under 640px width) -->
-    <div class="mobile-card" role="region" aria-label="Mobile PDF actions">
-      <p>On phones, PDF viewers can be limited. Use the buttons below:</p>
-      <div class="mobile-actions">
-        <a class="button" href="assets/portfolio.pdf" download>Download</a>
-        <a class="button" href="assets/portfolio.pdf" target="_blank" rel="noopener">Open ↗</a>
-      </div>
-    </div>
-
-    <p class="tip">Tip: If the inline viewer doesn’t appear, use “Open ↗”.</p>
-    <footer>© <span id="y"></span> Jerry Fu</footer>
-  </div>
-
-  <script>
-    // Keep year fresh automatically
-    document.getElementById('y').textContent = new Date().getFullYear();
-
-    // iOS Safari: ensure target=_blank works nicely and avoid pdf inline if very small landscape
-    try {
-      const isSmallLandscape = Math.min(window.innerWidth, window.innerHeight) < 480 && window.innerWidth > window.innerHeight;
-      if (isSmallLandscape) {
-        const viewer = document.querySelector('.viewer');
-        if (viewer) viewer.style.display = 'none';
-        const card = document.querySelector('.mobile-card');
-        if (card) card.style.display = 'grid';
-      }
-    } catch {}
-  </script>
+<body style="font-family: sans-serif; padding: 40px;">
+  <p>If you are not automatically redirected, <a href="assets/portfolio.pdf">click here to open my portfolio PDF</a>.</p>
 </body>
 </html>
